Fix link to the correct articles page in 404.html

--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
         <h2>行き止まり</h2>
         <p>
             お探しのページは見つかりませんでした<br><br>
-            <a href="https://kelpoftruth.com/article/">帰り道はこちら</a>
+            <a href="https://kelpoftruth.com/articles/">帰り道はこちら</a>
         </p>
     </div>
 </body>
