--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not Found</title>
+    <meta name=”robots” content=”noindex”>
     <style>
         html,body{
             margin: 0;
